--- a/css-source/amsthm/mmd-load-amsthm.tex
+++ b/css-source/amsthm/mmd-load-amsthm.tex
@@ -1,21 +1,21 @@
 \usepackage{amsthm}
 
 \theoremstyle{plain} % default
-\newtheorem{theorem}{Theorem}[\thmd]
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{proposition}[theorem]{Proposition}
-\newtheorem*{corollary}{Corollary}
+\newtheorem{Theorem}{Theorem}[\thmd]
+\newtheorem{Lemma}[Theorem]{Lemma}
+\newtheorem{Proposition}[Theorem]{Proposition}
+\newtheorem*{Corollary}{Corollary}
 
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}[\thmd]
-\newtheorem{conjecture}{Conjecture}[\thmd]
-\newtheorem{example}{Example}[\thmd]
-\newtheorem{postulate}{Postulate}[\thmd]
-\newtheorem{problem}{Problem}[\thmd]
+\newtheorem{Definition}{Definition}[\thmd]
+\newtheorem{Conjecture}{Conjecture}[\thmd]
+\newtheorem{Example}{Example}[\thmd]
+\newtheorem{Postulate}{Postulate}[\thmd]
+\newtheorem{Problem}{Problem}[\thmd]
 
 \theoremstyle{remark}
-\newtheorem*{remark}{Remark}
-\newtheorem*{note}{Note}
-\newtheorem{case}{Case}
+\newtheorem*{Remark}{Remark}
+\newtheorem*{Note}{Note}
+\newtheorem{Case}{Case}
 
 % proof is predefined, see documentation
